# dbglib

./: .gitignore  LICENSE  README.md  pyproject.toml
dbglib/: __init__.py  main.py
debuggery/: __init__.py  main.py
