[tool.poetry]
name = "debuggery"
version = "0.1.0"
description = ""
authors = ["Savio Xavier <savioxavier112@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
