[tool.poetry]
name = "debuggery"
version = "0.1.1"
description = ""
authors = ["Savio Xavier <savioxavier112@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry_bumpversion.file."debuggery/__init__.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
